[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/NPCs/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.2181, 31.8587 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 90, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 90, 20 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.227451, 0.792157, 0.145098, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -120, 0 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 120, 0 )
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Left_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Right" to="." method="_on_Right_body_exited"]
